-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
6.0
-
None
-
bf075da8004718e6a7e8d3870b912e89cea8d08c (qt/qtbase/dev)
I'm trying to enable FEATURE_SYSTEM_harfbuzz on macOS, which detects harfbuzz fine via pkg-config, but during build it fails to include the header file:
/usr/local/bin/ccache /Applications/Xcode_11.5.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++ -DENABLE_PIXMAN_DRAWHELPERS -DGL_SILENCE_DEPRECATION -DGui_EXPORTS -DMD4C_USE_UTF8 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_GUI_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_DEPRECATED_WARNINGS -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_QPA_DEFAULT_PLATFORM_NAME=\"cocoa\" -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Ddeprecations -Isrc/gui/Gui_autogen/include -Iinclude -Iinclude/QtGui -I../src/gui -Isrc/gui -I../src/gui/../3rdparty/VulkanMemoryAllocator -Iinclude/QtGui/6.0.0 -Iinclude/QtGui/6.0.0/QtGui -I../src/gui/../3rdparty/md4c -Iinclude/QtCore -I../mkspecs/macx-clang -Isrc/corelib -Iinclude/QtCore/6.0.0 -Iinclude/QtCore/6.0.0/QtCore -Iinclude/QtDBus -isystem /Library/Frameworks/Mono.framework/Headers -isystem /usr/local/include/harfbuzz -isystem /usr/local/include/freetype2 -isystem /usr/local/Cellar/glib/2.64.3/include/glib-2.0 -isystem /usr/local/Cellar/glib/2.64.3/lib/glib-2.0/include -g -isysroot /Applications/Xcode_11.5.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk -mmacosx-version-min=10.14 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -fapplication-extension -std=gnu++17 -MD -MT src/gui/CMakeFiles/Gui.dir/text/qtextengine.cpp.o -MF src/gui/CMakeFiles/Gui.dir/text/qtextengine.cpp.o.d -o src/gui/CMakeFiles/Gui.dir/text/qtextengine.cpp.o -c ../src/gui/text/qtextengine.cpp
In file included from ../src/gui/text/qtextengine.cpp:1603:
../src/gui/text/qharfbuzzng_p.h:62:12: fatal error: 'harfbuzz/hb.h' file not found
- include <harfbuzz/hb.h>
^~~~~~~~~~~~~~~
1 error generated.
Note that header file hb.h is under /usr/local/include/harfbuzz but /usr/local/include is missing from the compiler command line includes, because pkg-config returns only the first path.
- resulted from
-
QTBUG-85261 Don't use /usr/local libraries on macOS
-
- Closed
-
| For Gerrit Dashboard: QTBUG-85568 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 307854,3 | Include harfbuzz header files without harfbuzz/ parent directory | dev | qt/qtbase | Status: MERGED | +2 | 0 |