Include harfbuzz header files without harfbuzz/ parent directory

This is in accordance to the examples from harfbuzz docs:

https://harfbuzz.github.io/ch03s03.html

The fix is because `pkg-config --cflags harfbuzz` returns
the subdirectory as include path, for example:

-I /usr/local/include/harfbuzz

and this caused the system-harfbuzz not to be found when
/usr/local/include was not included by default (recent change on
macOS) and the code was doing #include <harfbuzz/hb.h>.

Fixes: QTBUG-85568
Change-Id: I12a34638e8ad5e3085768828457f0bfa1a2c68ad
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>